--- a/demo/index.html
+++ b/demo/index.html
@@ -63,7 +63,8 @@
           Make your ID a haiku. To get your ID: Click on profile > 3 Dots ... >
           Copy member ID. NOTE: There may be many solutions to one ID. If output
           is the same: Your ID is a haiku. If output is empty: Your ID cannot be
-          made into a haiku.
+          made into a haiku. To test: Replace your ID with your @mention handle
+          and send it in hackclub.
         </h2>
         <div class="flex gap-6">
           <textarea
